kubernetes-manifests/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  labels:
    app: inventory
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - image: us-central1-docker.pkg.dev/iscs-422911/app/appf:1.0.0
          name: inventory
          ports:
            - containerPort: 8000
