kubernetes-manifests/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-app-service
  labels:
    app: inventory
spec:
  selector:
    app: inventory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
